--- a/.github/workflows/update-covers.yml
+++ b/.github/workflows/update-covers.yml
@@ -55,7 +55,6 @@ jobs:
           git push
       
       - name: 📤 Trigger Sync to Manga Repos
-        if: steps.check_changes.outputs.has_changes == 'true'
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.PAT_TOKEN }}
@@ -63,7 +62,6 @@ jobs:
           client-payload: '{"triggered_by": "update-covers"}'
       
       - name: ✅ Success Notification
-        if: steps.check_changes.outputs.has_changes == 'true'
         run: |
-          echo "🎉 Cover update berhasil!"
+          echo "🎉 Cover check complete!"
           echo "📤 Sync trigger sent to all manga repos"
